tests/compile-fail/Rule_5_1.rs
#[forbid(clippy_pedantic)]
#[forbid(clippy)]
#[forbid(warnings)]

const ABC: i32 = 0;

fn main() {

    let abc: i32 = 1;

    println!("{} - {}",
    ABC,
    abc);
}
